apollo-router/src/plugins/response_cache/snapshots/apollo_router__plugins__response_cache__tests__private_only.snap
---
source: apollo-router/src/plugins/response_cache/tests.rs
expression: cache_keys
---
[
  {
    "key": "version:1.2:subgraph:user:type:Query:hash:8a5fb670d4bfcb50d484dee257cf8d295a117c475ab7c8c1d132c1354fdd79f3:data:070af9367f9025bd796a1b7e0cd1335246f658aa4857c3a4d6284673b7d07fa6:cde13a55f41e387480391c47238acfe9c0136dd56bf365b01416aec03eec7dc4",
    "invalidationKeys": [
      "currentUser",
      "subgraph-user",
      "type-user-Query"
    ],
    "indexes": {
      "subgraph": true,
      "type": true,
      "cache_tag": true
    },
    "kind": {
      "rootFields": [
        "currentUser"
      ]
    },
    "subgraphName": "user",
    "subgraphRequest": {
      "query": "{ currentUser { activeOrganization { __typename id } } }"
    },
    "source": "subgraph",
    "cacheControl": {
      "created": 0,
      "maxAge": 86400,
      "private": true
    },
    "shouldStore": true,
    "hashedPrivateId": "cde13a55f41e387480391c47238acfe9c0136dd56bf365b01416aec03eec7dc4",
    "data": {
      "data": {
        "currentUser": {
          "activeOrganization": {
            "__typename": "Organization",
            "id": "1"
          }
        }
      }
    },
    "warnings": []
  },
  {
    "key": "version:1.2:subgraph:orga:type:Organization:representation:f6e8c0c4f36d6c0d11330be52b76316559e0390ff75fd002ed3fa73f9b6470f7:hash:aea5bb0fdc880651b4bb6c392eea5b8c7c5b26af829da1143dd352f2c9f58bbd:data:070af9367f9025bd796a1b7e0cd1335246f658aa4857c3a4d6284673b7d07fa6:cde13a55f41e387480391c47238acfe9c0136dd56bf365b01416aec03eec7dc4",
    "invalidationKeys": [
      "organization",
      "organization-1",
      "subgraph-orga",
      "type-orga-Organization"
    ],
    "indexes": {
      "subgraph": true,
      "type": true,
      "cache_tag": true
    },
    "kind": {
      "typename": "Organization",
      "entityKey": {
        "id": "1"
      }
    },
    "subgraphName": "orga",
    "subgraphRequest": {
      "query": "query($representations: [_Any!]!) { _entities(representations: $representations) { ... on Organization { creatorUser { __typename id } } } }",
      "variables": {
        "representations": [
          {
            "id": "1",
            "__typename": "Organization"
          }
        ]
      }
    },
    "source": "subgraph",
    "cacheControl": {
      "created": 0,
      "maxAge": 86400,
      "private": true
    },
    "shouldStore": true,
    "hashedPrivateId": "cde13a55f41e387480391c47238acfe9c0136dd56bf365b01416aec03eec7dc4",
    "data": {
      "data": {
        "creatorUser": {
          "__typename": "User",
          "id": "2"
        }
      }
    },
    "warnings": []
  }
]
